# bkg-ccr-rag

./: .env.example  .gitignore  Dockerfile  README.md  hgt_metadata.json  pyproject.toml
helpers/: __init__.py  logger.py
kgs_builder/: pyproject.toml  run.py  three_layer_import.py  utils.py
kgs_builder/chunking/: __init__.py  semantic_chunker.py
kgs_builder/core/: add_summary_embeddings.py  agentic_chunker.py  diagnose_gid_context.py  inferrence_utils.py  link_layers.py  linking.py  regenerate_summaries.py  retrieve.py  summerize.py
kgs_builder/data_processing/: data_chunk.py  data_import_umls.py  data_loader.py  split_medr.py
kgs_builder/graph/: clean_graph.py  create_graph.py  create_graph_with_description.py
kgs_builder/nano_graphrag/: __init__.py  _llm.py  _op.py  _storage.py  _utils.py  base.py  graphrag.py  prompt.py
kgs_builder/ner/: __init__.py  raredisease_extractor.py
src/: main.py  train.py
src/configs/: config.yaml  settings.yaml
src/data_loader/: __init__.py  cache_manager.py  dataset.py  feature_builder.py  kg_loader.py  preprocessing.py
src/models/: __init__.py  alignment.py  fusion.py  graph_encoders.py  multi_view_model.py  projection_head.py  text_encoders.py
src/training/: __init__.py  evaluator.py  losses.py  trainer.py
