[project]
name = "kgs-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "datmieu204", email = "datt2505myethuy5@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.scripts]
kgs-builder = "kgs_builder:main"

[build-system]
requires = ["uv_build>=0.9.20,<0.10.0"]
build-backend = "uv_build"
